Fix spacing

--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 section {
-    width: 50%;
+    width: 40%;
     height: auto;
     margin-left: 30%;
-    margin-top: 2%;
+}
+
+h1 {
+	font-family: 'Pt Serif', 'Times New Roman', serif;
+	font-weight: 400;
+	font-size: 1.4rem;
+	margin: 0;
 }
 
 h3 {
 	font-size: 16px;
-	margin-bottom: 1rem;
 	margin-top: .5rem;
 	font-family: "Kanit", Tahoma, sans-serif;
 	font-weight: 800;
@@ -15,10 +20,9 @@ h3 {
 
 p {
 	font-size: 16px;
-	margin-bottom: 1rem;
-	margin-top: .5rem;
 	font-family: "Kanit", Tahoma, sans-serif;
 	font-weight: 400;
+    margin-top: 4px;
 }
 
 .grid {
